Cambios sustanciales en sistema de pagos, entidades, y demás, que da corregir persistencia